kubernetes/common/kserve/templates/networkpolicy.yaml
#
# Modifications Copyright © 2023 Nordix Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: modelmesh-controller
    app.kubernetes.io/managed-by: modelmesh-controller
    app.kubernetes.io/name: modelmesh-controller
  name: modelmesh-controller
spec:
  ingress:
  - ports:
    - port: 8443
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/managed-by: modelmesh-controller
      control-plane: modelmesh-controller
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: modelmesh-controller
    app.kubernetes.io/managed-by: modelmesh-controller
    app.kubernetes.io/name: modelmesh-controller
  name: modelmesh-runtimes
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/managed-by: modelmesh-controller
    ports:
    - port: 8033
      protocol: TCP
    - port: 8080
      protocol: TCP
  - ports:
    - port: 8033
      protocol: TCP
    - port: 8008
      protocol: TCP
  - ports:
    - port: 2112
      protocol: TCP
  podSelector:
    matchExpressions:
    - key: modelmesh-service
      operator: Exists
    matchLabels:
      app.kubernetes.io/managed-by: modelmesh-controller
  policyTypes:
  - Ingress
